--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,44 @@
-<p>login works!</p>
+<div class="container">
+  <div class="row justify-content-center p-4">
+    <div class="col-md-6">
+      <form (ngSubmit)="login()">
+        <h3>Login</h3>
+        <div class="form-group p-2">
+          <input
+            type="email"
+            name="email"
+            class="form-control"
+            placeholder="Enter Email ID"
+            [(ngModel)]="email"
+            required
+          />
+        </div>
+        <div class="form-group p-2">
+          <input
+            type="password"
+            name="password"
+            class="form-control"
+            placeholder="Enter Password"
+            [(ngModel)]="password"
+            required
+          />
+        </div>
+        <div class="form-group p-2">
+          <button type="submit" class="btn btn-primary">Login</button>
+          <div class="register">
+            <a href="#" routerLink="/register"> New User Register</a>
+          </div>
+        </div>
+      </form>
+      <div class="form-group p-2">
+        <p *ngIf="errorMessage.length > 0" class="text-danger">
+          {{ errorMessage }}
+        </p>
+
+        <p *ngIf="errorMessage.length > 0" class="text-danger">
+          {{ errorMessage }}
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
