--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,1 +1,7 @@
-<p>todo-list works!</p>
+<p>todo-list!</p>
+
+<div class="container">
+  <div class="row justify-content-center">
+    <button class="btn-danger" (click)="authservice.signOut()">Logout</button>
+  </div>
+</div>
