--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,67 @@
-<p>register works!</p>
+<!-- <div>
+  <form>
+    <div>
+      <h1>Register</h1>
+    </div>
+    <input
+      type="email"
+      placeholder="please input email"
+      name="email"
+      [(ngModel)]="email"
+      required
+    />
+    <input
+      type="password"
+      placeholder="please input password"
+      name="password"
+      [(ngModel)]="password"
+      required
+    />
+    <button type="submit">Register</button>
+  </form>
+</div>
+ -->
+<div class="container">
+  <div class="row justify-content-center p-4">
+    <div class="col-md-6">
+      <form (ngSubmit)="register()">
+        <h3>Register</h3>
+        <div class="form-group p-2">
+          <input
+            type="email"
+            name="email"
+            class="form-control"
+            placeholder="Enter Email ID"
+            [(ngModel)]="email"
+            required
+          />
+        </div>
+        <div class="form-group p-2">
+          <input
+            type="password"
+            name="password"
+            class="form-control"
+            placeholder="Enter Password"
+            [(ngModel)]="password"
+            required
+          />
+        </div>
+        <div class="form-group p-2">
+          <button type="submit" class="btn btn-primary">Login</button>
+          <div class="register">
+            <a href="#" routerLink="/login"> Get Back to Login</a>
+          </div>
+        </div>
+      </form>
+      <div class="form-group">
+        <p *ngIf="errorMessage.length > 0" class="text-danger">
+          {{ errorMessage }}
+        </p>
+
+        <p *ngIf="errorMessage.length > 0" class="text-info">
+          {{ message }}
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
