Functional but need fixing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,5 +21,32 @@
     >
   </nav>
 </span> -->
+<!-- <div class="container-fluid">
+  <div style="width: 300px;">
+    <form (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="tasks">TASK</label>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Enter content..."
+          id="tasks"
+          required
+          [(ngModel)]="taskValue"
+          name="tasks"
+        />
+      </div>
+
+      <div class="btn-group">
+        <button type="submit" class="btn btn-success">Submit</button>
+      </div>
+    </form>
+  </div>
+
+  <h2>Content from Firebase</h2>
+  <div class="col-md-3">
+    <pre *ngFor="let tasks of tasks | async">{{ tasks.content }}</pre>
+  </div>
+</div> -->
 
 <router-outlet></router-outlet>
