Final again with some design

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -27,16 +27,21 @@
       <form (ngSubmit)="register()">
         <h3>Register</h3>
         <div class="form-group p-2">
+          <label for="exampleInputEmail1">Email address</label>
           <input
             type="email"
             name="email"
             class="form-control"
-            placeholder="Enter Email ID"
+            placeholder="Enter email address"
             [(ngModel)]="email"
             required
           />
+          <small id="emailHelp" class="form-text text-muted"
+            >Input an email address that is real! 😠
+          </small>
         </div>
         <div class="form-group p-2">
+          <label for="exampleInputPassword1">Password</label>
           <input
             type="password"
             name="password"
@@ -45,11 +50,16 @@
             [(ngModel)]="password"
             required
           />
+          <small id="emailHelp" class="form-text text-muted"
+            >Input a password that you will remember! 🤔
+          </small>
         </div>
         <div class="form-group p-2">
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-primary">Register</button>
           <div class="register">
-            <a href="#" routerLink="/login"> Get Back to Login</a>
+            <a href="#" routerLink="/login"
+              ><button class="btn btn-secondary">Get Back to Login</button>
+            </a>
           </div>
         </div>
       </form>
@@ -65,3 +75,10 @@
     </div>
   </div>
 </div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+  <path
+    fill="#F2CA00"
+    fill-opacity="1"
+    d="M0,288L26.7,245.3C53.3,203,107,117,160,112C213.3,107,267,181,320,186.7C373.3,192,427,128,480,96C533.3,64,587,64,640,90.7C693.3,117,747,171,800,170.7C853.3,171,907,117,960,133.3C1013.3,149,1067,235,1120,240C1173.3,245,1227,171,1280,160C1333.3,149,1387,203,1413,229.3L1440,256L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
+  ></path>
+</svg>
