--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,5 +1,3 @@
-<p>todo-list!</p>
-
 <!-- <div class="container-fluid">
   <div style="width: 300px;">
     <form (ngSubmit)="onSubmit()">
@@ -27,23 +25,31 @@
     <pre *ngFor="let todos of todos | async">{{ todos.content }}</pre>
   </div>
 </div> -->
-<div>
+<div class="row justify-content-center">
   <form (ngSubmit)="createTodos(); todoForm.resetForm()" #todoForm="ngForm">
     <div>
-      Add a To-Do
+      <label for="exampleInputEmail1">Add a task</label>
     </div>
     <input
+      class="form-control"
       type="text"
       placeholder="Todo"
       [(ngModel)]="todoValue"
       name="todos"
     />
-    <button type="submit">Add</button>
+    <br />
+    <div class="row justify-content-center">
+      <button class="btn btn-success" type="submit">
+        Add
+      </button>
+    </div>
   </form>
 </div>
-
+<br />
 <div class="container">
   <div class="row justify-content-center">
-    <button class="btn-danger" (click)="authservice.signOut()">Logout</button>
+    <button class="btn btn-danger" (click)="authservice.signOut()">
+      Logout
+    </button>
   </div>
 </div>
